--- a/views/partial-id.html
+++ b/views/partial-id.html
@@ -1,19 +1,35 @@
-${dataArray.map(albums => 
-    `<p>${albums.artist} - ${albums.name} - ${albums.genre}</p>`).join("")}
-
-
-    ${reviewArray.map(review => 
-        `<div class="callout"> <div class="grid-container"><div class="cell small-4"><p>${review.stars} ${review.username} ${review.review}</p></div></div></div>`).join("")}
-
+${dataArray.map(albums => `
+<p>${albums.artist} - ${albums.name} - ${albums.genre}</p>
+`).join("")} ${reviewArray.map(review => `
+<div class="callout" align="center">
+  <div class="grid-container">
+    <div class="cell small-4">
+      <p>${"🌟".repeat([review.stars])} ${review.username} ${review.review}</p>
+    </div>
+  </div>
+</div>
+`).join("")}
 
 <form action="/" method="POST">
-    <input type="hidden" value="1" name="user_id">
-   <input type="hidden" value=${dataArray[0].id} name="album_id">
-    <label> Title: 
-        <input type="text" name="review_title" placeholder="Review Title">
-    </label>
-    <label> Text: 
-        <textarea name="review_review" placeholder="Review Text"></textarea>
-    </label>
-    <button class="button" type="submit">Save Review</button>
+  <input type="hidden" value="1" name="user_id" />
+  <input type="hidden" value="${dataArray[0].id}" name="album_id" />
+  <label>
+    Title:
+    <input type="text" name="review_title" placeholder="Review Title" />
+  </label>
+  <label>
+    Text:
+    <textarea name="review_review" placeholder="Review Text"></textarea>
+  </label>
+  <label
+    >Star Rating
+    <select name="starRating">
+      <option value="1">🌟</option>
+      <option value="2">🌟🌟</option>
+      <option value="3">🌟🌟🌟</option>
+      <option value="4">🌟🌟🌟🌟</option>
+      <option value="5">🌟🌟🌟🌟🌟</option>
+    </select>
+  </label>
+  <button class="button" type="submit">Save Review</button>
 </form>
