--- a/views/partial-login.html
+++ b/views/partial-login.html
@@ -3,7 +3,7 @@
         <input type="text" name="user_email" placeholder="Email">
     </label>
     <label> Password: 
-        <input type="password" name="user_password" placeholder="password">
+        <input type="password" name="user_password" placeholder="Password">
     </label>
     <button class="button" type="submit">Login</button>
-</form>
+</form> 
