--- a/views/partial-signup.html
+++ b/views/partial-signup.html
@@ -10,7 +10,7 @@
         <input type="text" name="user_email" placeholder="Email">
     </label>
     <label> Password: 
-        <input type="password" name="user_password" placeholder="password">
+        <input type="password" name="user_password" placeholder="Password">
     </label>
     <button class="button" type="submit">Sign Up</button>
 </form>
