--- a/views/partial-signup.html
+++ b/views/partial-signup.html
@@ -1,10 +1,10 @@
 
 <form action="/users/signup" method="POST">
     <label> First Name: 
-        <input type="text" name="user_first" placeholder="First Name">
+        <input type="text" name="first_name" placeholder="First Name">
     </label>
     <label> Last Name: 
-        <input type="text" name="user_last" placeholder="Last Name">
+        <input type="text" name="last_name" placeholder="Last Name">
     </label>
     <label> Email: 
         <input type="text" name="user_email" placeholder="Email">
